[package]
name = "quadratic_sieve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
env_logger = "0.9.0"
log = "0.4.17"
ndarray = "0.15.6"
num = { version = "0.4.0", features = ["num-bigint"] }
